Ya funciona Preferencias